changes done in vercel

--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,5 @@
 {
   "rewrites": [
-    { "source": "/(.*)", "destination": "/GNADENTAL/$1" }
+    { "source": "/(.*)", "destination": "/gnadental/$1" }
   ]
 }
